HelloUltraviolet/Fixtures/RejectedSource/SourceText/MalformedNumericLiteral/Expected.uv
//! Expected diagnostic metadata for the MalformedNumericLiteral rejected-source specimen.

expectedDiagnostic("E-SRC-0304", "Lex-Numeric-Err")
